Mise en place de l'API à travers le fichier swagger
