# resources/swagger/georchestra-plui-evolution.json
@@ -136,6 +136,107 @@
 				}
 			}
 		},
+		"/request": {
+			"post": {
+				"summary": "Création d'une nouvelle demande",
+				"tags": [
+					"request"
+				],
+				"description": "Permet de créer une nouvelle demande",
+				"operationId": "createPluiRequest",
+				"produces": [
+					"application/json"
+				],
+				"parameters": [
+					{
+						"in": "body",
+						"name": "pluiRequest",
+						"description": "Demande à créer",
+						"required": true,
+						"schema": {
+							"$ref": "#/definitions/PluiRequest"
+						}
+					}
+				],
+				"responses": {
+					"200": {
+						"description": "Demande créée",
+						"schema": {
+							"$ref": "#/definitions/PluiRequest"
+						}
+					},
+					"500": {
+						"description": "Internal server error",
+						"schema": {
+							"$ref": "#/definitions/ApiError"
+						}
+					}
+				}
+			}
+		},
+		"/request/{uuid}": {
+			"get": {
+				"summary": "Récupération d'une demande spécifique en fonction de son uuid",
+				"tags": [
+					"request"
+				],
+				"description": "Permet d'obtenir une demande à partir de son uuid",
+				"operationId": "getPluiRequestByUuid",
+				"produces": [
+					"application/json"
+				],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "uuid",
+						"description": "Uuid de la demande",
+						"required": true,
+						"type": "string",
+						"format": "uuid"
+					}
+				],
+				"responses": {
+					"200": {
+						"description": "Demande trouvée",
+						"schema": {
+							"$ref": "#/definitions/PluiRequest"
+						}
+					},
+					"500": {
+						"description": "Internal server error",
+						"schema": {
+							"$ref": "#/definitions/ApiError"
+						}
+					}
+				}
+			},
+			"delete": {
+				"summary": "Suppression d'une demande",
+				"tags": [
+					"request"
+				],
+				"description": "Permet de supprimer une demande à partir de son uuid",
+				"operationId": "deletePluiRequest",
+				"produces": [
+					"application/json"
+				],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "uuid",
+						"description": "Uuid de la demande à supprimer",
+						"required": true,
+						"type": "string",
+						"format": "uuid"
+					}
+				],
+				"responses": {
+					"200": {
+						"description": "OK"
+					}
+				}
+			}
+		},
 		"/request/{uuid}/upload": {
 			"post": {
 				"tags": [
@@ -187,41 +288,26 @@
 				}
 			}
 		},
-		"/request/{uuid}/delete/{attachmentId}": {
-			"delete": {
+		"/request/ref/type": {
+			"get": {
 				"tags": [
 					"request"
 				],
-				"summary": "Suppression d'un pièce jointe sur une demande",
-				"description": "",
-				"operationId": "deleteDocument",
+				"summary": "Permet de retourner les ref de tous les types de demande",
+				"description": "References des types de demandes",
+				"operationId": "getPluiRequestTypes",
 				"produces": [
 					"application/json"
 				],
-				"parameters": [
-					{
-						"in": "path",
-						"name": "uuid",
-						"description": "Identifiant de la demande",
-						"required": true,
-						"type": "string",
-						"format": "uuid"
-					},
-					{
-						"in": "path",
-						"name": "attachmentId",
-						"description": "Identifiant de l'attachement",
-						"required": true,
-						"type": "integer",
-						"format": "int64"
-					}
-				],
 				"responses": {
 					"200": {
-						"description": "OK"
-					},
-					"400": {
-						"description": "bad input parameter"
+						"description": "Liste des types de PluiRequest",
+						"schema": {
+							"type": "array",
+							"items": {
+								"$ref": "#/definitions/PluiRequestType"
+							}
+						}
 					},
 					"500": {
 						"description": "Internal server error",
@@ -232,44 +318,26 @@
 				}
 			}
 		},
-		"/request/{uuid}/download/{attachmentId}": {
+		"/request/ref/status": {
 			"get": {
 				"tags": [
 					"request"
 				],
-				"summary": "Téléchargement d'un pièce attachée à une demande",
-				"description": "",
-				"operationId": "downloadDocument",
+				"summary": "Permet de retourner les ref de tous les status de demande",
+				"description": "References des status de demandes",
+				"operationId": "getPluiRequestStatus",
 				"produces": [
 					"application/json"
 				],
-				"parameters": [
-					{
-						"in": "path",
-						"name": "uuid",
-						"description": "Identifiant de la demande",
-						"required": true,
-						"type": "string",
-						"format": "uuid"
-					},
-					{
-						"in": "path",
-						"name": "attachmentId",
-						"description": "Identifiant de l'attachement",
-						"required": true,
-						"type": "integer",
-						"format": "int64"
-					}
-				],
 				"responses": {
 					"200": {
-						"description": "OK",
+						"description": "Liste des status de PluiRequest",
 						"schema": {
-							"type": "file"
+							"type": "array",
+							"items": {
+								"$ref": "#/definitions/Status"
+							}
 						}
-					},
-					"400": {
-						"description": "bad input parameter"
 					},
 					"500": {
 						"description": "Internal server error",
@@ -387,10 +455,10 @@
 		"Point2D":{
 			"type": "array",
 			"maxItems": 2,
-    		"minItems": 2,
-    		"items":{
-    			"type": "number"
-    		}
+			"minItems": 2,
+			"items":{
+				"type": "number"
+			}
 		},
 		"Point": {
 			"type": "object",
@@ -510,7 +578,7 @@
 			]
 		},
 		"GeometryCollection":{
-    		"type": "object",
+			"type": "object",
 			"description": "GeoJSon geometry collection",
 			"properties": {
 				"type": {
@@ -524,9 +592,9 @@
 					}
 				}
 			}
-    	},
-    	"Style": {
-    		"type": "object",
+		},
+		"Style": {
+			"type": "object",
 			"description": "GeoJSon feature style",
 			"properties": {
 				"color": {
@@ -580,9 +648,9 @@
 					"type": "boolean"
 				}
 			}
-    	},
-    	"Feature":{
-    		"type": "object",
+		},
+		"Feature":{
+			"type": "object",
 			"description": "GeoJSon feature",
 			"properties": {
 				"type": {
@@ -606,9 +674,9 @@
 					"type": "object"
 				}
 			}
-    	},
-    	"FeatureCollection":{
-    		"type": "object",
+		},
+		"FeatureCollection":{
+			"type": "object",
 			"description": "GeoJSon feature collection",
 			"properties": {
 				"type": {
@@ -628,68 +696,172 @@
 					}
 				}
 			}
-    	},
-    	"FeatureProperty":{
-    		"type": "object",
-    		"description": "GeoJSon feature property description",
-    		"properties": {
-    			"name":{
-    				"type": "string"
-    			},
-    			"maxOccurs": {
-    				"type": "integer",
-    				"format": "int32"
-    			},
-    			"minOccurs": {
-    				"type": "integer",
-    				"format": "int32"
-    			},
-    			"nillable": {
-    				"type": "boolean"
-    			},
-    			"type": {
-    				"type": "string"
-    			},
-    			"localType": {
-    				"type": "string"
-    			}
-    		}
-    	},
-    	"FeatureType": {
-    		"type": "object",
-    		"description": "GeoJSon feature type",
-    		"properties": {
-    			"typeName":{
-    				"type": "string"
-    			},
-    			"properties":{
-    				"type": "array",
-    				"items": {
-    					"$ref": "#/definitions/FeatureProperty"
-    				}
-    			}
-    		}
-    	},
-    	"FeatureTypeDescription": {	
-    		"type": "object",
-    		"description": "GeoJSon feature type description",
-    		"properties": {
-    			"elementFormDefault":{
-    				"type": "string"
-    			},
-    			"targetNamespace": {
-    				"type": "string"
-    			},
-    			"targetPrefix": {
-    				"type": "string"
-    			},
+		},
+		"FeatureProperty":{
+			"type": "object",
+			"description": "GeoJSon feature property description",
+			"properties": {
+				"name":{
+					"type": "string"
+				},
+				"maxOccurs": {
+					"type": "integer",
+					"format": "int32"
+				},
+				"minOccurs": {
+					"type": "integer",
+					"format": "int32"
+				},
+				"nillable": {
+					"type": "boolean"
+				},
+				"type": {
+					"type": "string"
+				},
+				"localType": {
+					"type": "string"
+				}
+			}
+		},
+		"FeatureType": {
+			"type": "object",
+			"description": "GeoJSon feature type",
+			"properties": {
+				"typeName":{
+					"type": "string"
+				},
+				"properties":{
+					"type": "array",
+					"items": {
+						"$ref": "#/definitions/FeatureProperty"
+					}
+				}
+			}
+		},
+		"FeatureTypeDescription": {
+			"type": "object",
+			"description": "GeoJSon feature type description",
+			"properties": {
+				"elementFormDefault":{
+					"type": "string"
+				},
+				"targetNamespace": {
+					"type": "string"
+				},
+				"targetPrefix": {
+					"type": "string"
+				},
 				"featureTypes": {
 					"type": "array",
 					"items": {
-    					"$ref": "#/definitions/FeatureType"
-    				}
+						"$ref": "#/definitions/FeatureType"
+					}
 				}
-    		}
-    	}
+			}
+		},
+		"PluiRequest": {
+			"type": "object",
+			"description": "Il s'agit de la representation d'une demande",
+			"properties": {
+				"uuid": {
+					"type": "string",
+					"format": "uuid"
+				},
+				"subject": {
+					"type": "string"
+				},
+				"object": {
+					"type": "string"
+				},
+				"comment": {
+					"type": "string"
+				},
+				"initiator": {
+					"type": "string"
+				},
+				"creationDate": {
+					"type": "string",
+					"format": "date"
+				},
+				"geometry": {
+					"description": "Il s'agit de la localisation de la demande qui est un point",
+					"$ref": "#/definitions/Point"
+				},
+				"area": {
+					"description": "Commune associée à la demande",
+					"$ref": "#/definitions/GeographicArea"
+				},
+				"status": {
+					"description": "Statut de la demande",
+					"$ref": "#/definitions/PluiRequestStatus"
+				},
+				"type": {
+					"description": "Type de demande",
+					"$ref": "#/definitions/PluiRequestType"
+				}
+			}
+		},
+		"GeographicArea": {
+			"type": "object",
+			"properties": {
+				"id": {
+					"type": "integer",
+					"format": "int32"
+				},
+				"nom": {
+					"type": "string"
+				},
+				"codeInsee": {
+					"type": "integer",
+					"format": "int32"
+				},
+				"geometry": {
+					"$ref": "#/definitions/Geometry"
+				}
+			}
+		},
+		"PluiRequestStatus": {
+			"type": "object",
+			"properties": {
+				"id": {
+					"type": "integer",
+					"format": "int64"
+				},
+				"value": {
+					"$ref": "#/definitions/PluiRequestStatusEnum"
+				}
+			}
+		},
+		"PluiRequestStatusEnum": {
+			"type": "string",
+			"enum": [
+				"STATUT_NOUVEAU",
+				"STATUT_ANALYSE_EN_COURS",
+				"STATUT_EN_ATTENTE_VALIDATION_COMMUNE",
+				"STATUT_VALIDE_COMMUNE",
+				"STATUT_DEMANDE_NON_RECEVABLE",
+				"STATUT_DEMANDE_REFORMULEE"
+			]
+		},
+		"PluiRequestType": {
+			"type": "object",
+			"properties": {
+				"id": {
+					"type": "integer",
+					"format": "int64"
+				},
+				"value": {
+					"$ref": "#/definitions/PluiRequestTypeEnum"
+				}
+			}
+		},
+		"PluiRequestTypeEnum": {
+			"type": "string",
+			"enum": [
+				"TYPE_COMMUNE",
+				"TYPE_INTERCOMMUNE",
+				"TYPE_METROPOLITAIN"
+			]
+		}
 	}
 }
